Fixed Spacing

--- a/@480.css
+++ b/@480.css
@@ -86,6 +86,7 @@
     #spell-wrapper, #witch-wrapper{
         margin-block: 12px;
         gap: 12px;
+        justify-content: flex-start;
     }
     #witch-wrapper{
         height: 100vh;
@@ -108,7 +109,7 @@
     #catalog-backtext, #contracts-backtext{
         font-size: var(--small-font-size);
     }
-    /*Selene*/
+    /*Contract*/
     #contract-wrapper{
         flex-direction: column;
         margin-block: 12px;
